--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hair-by-the-goat",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,16 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "lucide-react": "^0.555.0",
-    "react-dom": "^19.2.0",
     "react": "^19.2.0",
-    "@google/genai": "^1.30.0",
-    "framer-motion": "^12.23.25"
+    "react-dom": "^19.2.0",
+    "framer-motion": "^12.23.25",
+    "lucide-react": "^0.555.0",
+    "@google/genai": "^1.30.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@vitejs/plugin-react": "^4.2.1",
+    "vite": "^5.2.0",
+    "typescript": "^5.2.2",
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0"
   }
 }
